# elliott-portfolio-

./: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
myvoice/: .env.example  .gitignore  AGENTS.md  README.md  SPEC.md  alembic.ini  check_openai.py  debug_app.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  reset_db.py  test_backend_script.py
myvoice/alembic/: env.py
myvoice/app/: config.py  database.py  main.py  seed.py
myvoice/docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
myvoice/docs/: character_design_brief.md  deployment_checklist.md  deployment_guide.md  development_plan_v2.md  gemini_phase1_prompt.md  gemini_phase2_prompt.md  gemini_phase3_prompt.md  gemini_voice_ai_prompt.md  implementation_plan.md  story_enhancement_plan.md  story_review.md  story_review_v2.md
myvoice/frontend/: index.html  package-lock.json  package.json  vite.config.ts
myvoice/migrations/: env.py
myvoice/scripts/: add_image_path_column.py  check_column.py  generate_images.py  generate_stories.py  import_story.py  seed_curriculum.py  seed_curriculum_dino.py  seed_curriculum_kpop.py  seed_skills.py  seed_vocabulary.py  set_placeholder_images.py  story_writer_agent.py  test_child_management.py  test_latency.py  test_report_generation.py  test_safety.py  verify_parent_api.py  verify_phase4.py  verify_speech_pipeline.py  verify_voice_flow.py
myvoice/tests/: conftest.py  test_e2e_auth.py  test_e2e_kid_features.py  test_e2e_parent.py  test_e2e_voice_session.py  test_phase1.py  test_phase3_integration.py
(+327 files in other folders)
